# stream-link-locator

./: Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  settings.yaml
.github/workflows/: test.yml
stream_link_locator/: bootstrap.py
stream_link_locator/adapters/: orm.py
stream_link_locator/adapters/parsers/: base_parser.py  elcano_parser.py  parser_factory.py
stream_link_locator/adapters/repositories/: __init__.py  channel_repository.py
stream_link_locator/domain/: commands.py  events.py
stream_link_locator/domain/models/: aggregate.py  channel.py
stream_link_locator/entrypoints/: fastapi_app.py
stream_link_locator/presentation/: security.py
stream_link_locator/presentation/rest/: channels.py
stream_link_locator/services/: loader_service.py  message_bus.py  unit_of_work.py
